# thaumcraft4-research-bot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
minecraft_resource_pack/: pack.mcmeta
src/: __main__.py  aspects.py  colors.py  finder.py  grid.py  main.py  window.py
src/solvers/: ringsolver.py
src/thaumcraft4_research_bot/: __init__.py  main.py
src/thaumcraft4_research_bot/utils/: aspectobj.py  aspects.py  colors.py  finder.py  grid.py  log.py  renderer.py  window.py
src/thaumcraft4_research_bot/utils/solvers/: ringsolver.py
src/utils/: aspectobj.py  aspects.py  config.py  finder.py  grid.py  inventory.py  log.py  mouseactions.py  renderer.py  window.py
